Migration to Java 11 (#144)
* migration to java11

* updated to Java11

* provider invoking code updated

* pom file updated

* PKCS11 provider code updated

* maven compiler plugin added

* lombok version updated

Co-authored-by: Nagarjuna <Nagarjuna@host.docker.internal>